--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web' // tomcat, spring mvc등 웹 개발에 필요한 모든 의존성을 보유
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 코드에 필요한 의존성 보유
 }
 
 tasks.named('bootBuildImage') {
