--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web' // tomcat, spring mvc등 웹 개발에 필요한 모든 의존성을 보유
 	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 코드에 필요한 의존성 보유
+
+	runtimeOnly 'com.h2database:h2' // h2 데이터베이스 의존성 보유
+
 }
 
 tasks.named('bootBuildImage') {
