gson 의존성 주입

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2' // h2 데이터베이스 의존성 보유
 
+	implementation 'com.google.code.gson:gson:2.10.1' // gson 의존성 보유
+
 }
 
 tasks.named('bootBuildImage') {
