--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 
 	implementation 'com.google.code.gson:gson:2.10.1' // gson 의존성 보유
 
+	// logback 의존성 보유
+	implementation 'ch.qos.logback:logback-core:1.4.14'
+	implementation 'ch.qos.logback:logback-classic:1.4.14'
+	implementation 'org.slf4j:slf4j-api:2.0.9'
+
 }
 
 tasks.named('bootBuildImage') {
