--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	implementation 'ch.qos.logback:logback-classic:1.4.14'
 	implementation 'org.slf4j:slf4j-api:2.0.9'
 
+	// guava 의존성 보유
+	implementation 'com.google.guava:guava:32.1.3-jre'
+
 }
 
 tasks.named('bootBuildImage') {
