--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web' // tomcat, spring mvc등 웹 개발에 필요한 모든 의존성을 보유
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 코드에 필요한 의존성 보유
+	testImplementation 'io.rest-assured:rest-assured:5.3.2' // rest-assured 의존성 보유
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // spring data jpa 의존성 보유
 
