build.gradle에 Springdoc OpenAPI 종속성 추가
이 커밋은 Swagger API 설명서를 위한 Springdoc OpenAPI를 소개합니다. 새로운 종속성을 사용하면 build.gradle 파일에서 OpenAPI 및 Swagger의 모델 패키지를 사용하여 애플리케이션의 엔드포인트와 응답을 더 잘 이해하고 테스트할 수 있습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
 	implementation 'com.google.code.gson:gson:2.10.1' // gson 의존성 보유
 
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' // openapi 의존성 보유
+
 	// logback 의존성 보유
 	implementation 'ch.qos.logback:logback-core:1.4.14'
 	implementation 'ch.qos.logback:logback-classic:1.4.14'
