build.gradle에 'commons-codec' 종속성 추가
base 64로 디코딩하기 위해 의존성을 추가합니다.

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	// guava 의존성 보유
 	implementation 'com.google.guava:guava:32.1.3-jre'
 
+	implementation 'commons-codec:commons-codec:1.16.0' // commons-codec 의존성 보유
+
 }
 
 tasks.named('bootBuildImage') {
