build.gradle에 logstash 및 AWS 로그백 종속성 추가
이 커밋은 build.gradle 파일에 logstash-logback-encoder 및 logback-awslogs-appender에 대한 종속성을 포함합니다. 이러한 새로운 종속성은 애플리케이션의 로깅 기능을 향상시켜 Logstash와 AWS CloudWatch에 직접 로그를 전송할 수 있게 해줍니다.

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,12 @@ dependencies {
 
 	implementation 'commons-codec:commons-codec:1.16.0' // commons-codec 의존성 보유
 
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+
+	implementation 'ca.pjer:logback-awslogs-appender:1.6.0'
+
+
+
 }
 
 tasks.named('bootBuildImage') {
