--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
 	implementation 'ca.pjer:logback-awslogs-appender:1.6.0'
 
-
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.2.1'
 
 }
 
